--- a/main.css
+++ b/main.css
@@ -33,6 +33,14 @@ h1,h2,h3,h4,h5,h6{font-weight:400;margin:10px 0}
   .rooster_sb {
     width: 350px;
     height: 200px;
+    border: 5px solid #000000;
+    padding: 0px 0px 0px 0px;
+    margin: 30px auto;
+    border-radius: 50%;
+    font-size: 24px;
+    font-weight: 900;
+    color: #000000;
+    position: relative;
   }
 
 .rooster_circle1 {
@@ -46,7 +54,7 @@ right: 170px;
 bottom: -110px;
 }
 
-:
+
 
 .rooster_circle2 {
   border: 5px solid #000000;
