--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ h1,h2,h3,h4,h5,h6{font-weight:400;margin:10px 0}
   position: relative;
 
 }
-@media (max-width:992px) {
+@media screen and (max-width:600px) {
   .rooster_sb {
     width: 350px;
     height: 200px;
@@ -84,7 +84,7 @@ bottom: -110px;
   background-repeat:   no-repeat;
   background-size:     cover;
 }
-@media (max-width:992px) {
+@@media screen and (max-width:992px) {
   .rooster_img {
     width:  227px;
     height: 250px;
