--- a/main.css
+++ b/main.css
@@ -13,8 +13,12 @@ h6{font-size:16px}
 h1,h2,h3,h4,h5,h6{font-weight:400;margin:10px 0}
 
 .main {text-align: center;}
-@media (max-width:992px){.main{margin-left:0!important;margin-right:0!important}  }
+@media (max-width:600px){.main{margin-left:0!important;margin-right:0!important}  }
 .padding{padding:64px 8px 64px;}
+@media screen and (max-width:600px){
+.padding{padding:34px 0px 34px;
+font-size: 10px;}
+}
 .container{padding:0.01em 16px;}
 .rooster_sb {
   width: 450px;
