--- a/main.css
+++ b/main.css
@@ -14,11 +14,9 @@ h1,h2,h3,h4,h5,h6{font-weight:400;margin:10px 0}
 
 .main {text-align: center;}
 @media (max-width:600px){.main{margin-left:0!important;margin-right:0!important}  }
+
 .padding{padding:64px 8px 64px;}
-@media screen and (max-width:600px){
-.padding{padding:34px 0px 34px;
-font-size: 10px;}
-}
+@media screen and (max-width:600px){.padding{padding:34px 0px 34px;font-size: 20px;}}
 .container{padding:0.01em 16px;}
 .rooster_sb {
   width: 450px;
@@ -32,6 +30,19 @@ font-size: 10px;}
   color: #000000;
   position: relative;
 }
+@media screen and (max-width:600px) {
+  .rooster_sb {
+    width: 250px;
+    height: 150px;
+    border: 5px solid #000000;
+    padding: 0px 0px 0px 0px;
+    margin: 30px auto;
+    border-radius: 50%;
+    font-weight: 900;
+    color: #000000;
+    position: relative;
+  }
+}
 
 .rooster_circle1 {
 border: 5px solid #000000;
@@ -44,6 +55,14 @@ right: 170px;
 bottom: -110px;
 }
 
+@media screen and (max-width:600px) {
+.rooster_circle1{
+  right: 85px;
+  bottom: -90px;
+  width: 75px;
+  height: 75px;
+  }}
+
 
 .rooster_circle2 {
   border: 5px solid #000000;
@@ -55,6 +74,13 @@ bottom: -110px;
   right: 190px;
   bottom: -170px;
 }
+
+@media screen and (max-width:600px) {
+.rooster_circle2{
+  right: 85px;
+  bottom: -145px;}}
+
+
 .rooster_circle3 {
   border: 5px solid #000000;
   position: absolute;
@@ -64,6 +90,12 @@ bottom: -110px;
   right: 193px;
   bottom: -210px;
 }
+@media screen and (max-width:600px) {
+  .rooster_circle3{
+    right: 68px;
+    bottom: -180px;}}
+
+
 .rooster_img {
   position: relative;
   width:  327px;
@@ -75,11 +107,11 @@ bottom: -110px;
   background-size:     cover;
 }
 
-@@media screen and (max-width:600px) {
+@media screen and (max-width:600px) {
   .rooster_img {
-    width:  227px;
-    height: 250px;
-    top: 270px;
+    width:  280px;
+    height: 300px;
+    top: 180px;
     background-position: 50% 50%;
     background-repeat:   no-repeat;
     background-size:     cover;
@@ -246,24 +278,3 @@ bottom: -110px;
     background-image:-o-linear-gradient(top, #3EACBA, #48C6D4);
     background-image:linear-gradient(top, #3EACBA, #48C6D4);
 }
-
-
-@media screen and (max-width:600px) {
-  .rooster_sb {
-    width: 350px;
-    height: 200px;
-    border: 5px solid #000000;
-    padding: 0px 0px 0px 0px;
-    margin: 30px auto;
-    border-radius: 50%;
-    font-size: 10px;
-    font-weight: 900;
-    color: #000000;
-    position: relative;
-  }
-}
-
-@media (max-width:600px) {.rooster_circle3{ right: 155px; bottom: -205px;}}
-@media (max-width:600px) {.rooster_circle2{ right: 150px; bottom: -165px;}}
-@media (max-width:600px) {.rooster_circle1{ right: 125px; bottom: -110px;}}
-@media (max-width:600px) {.rooster_sb{font-size: 18px; width: 350px }}
