--- a/main.css
+++ b/main.css
@@ -130,6 +130,12 @@ bottom: -110px;
   margin: 30px auto;
   border-radius: 50%;
 }
+@media screen and (max-width:600px) {
+.penis_img {
+  width:  227px;
+  height: 250px;
+}
+
 .penis_circle1 {
   border: 2px solid #000000;
   position: absolute;
@@ -140,6 +146,7 @@ bottom: -110px;
   left: 145px;
   top: 340px;
 }
+
 
 .penis_circle2 {
   border: 2px solid #000000;
